<resources>
    <string name="app_name">HalanChallenge</string>
    <string name="login">تسجيل الدخول</string>
    <string name="user_name">اسم المستخدم</string>
    <string name="password">كلمه السر</string>
    <string name="my_products">منتجاتي</string>
    <string name="more">المزيد</string>
    <string name="back">رجوع</string>
    <string name="product_details">تفاصيل المنتج</string>
    <string name="description">الوصف</string>
    <string name="content_description">halan_task_app_challenge_description</string>
    <string name="online">Online</string>
    <string name="offline_mode">offline mode</string>
</resources>